kubernetes/infrastructure/network/cilium/base/hubble-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=hubble-relay"
    gethomepage.dev/name: Hubble
    gethomepage.dev/description: Cilium Network Observability
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: cilium.png
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - hubble.timourhomelab.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
