kubernetes/infrastructure/network/cilium/base/arc-runner-talos-api.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: arc-runner-talos-api
spec:
  nodeSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: arc-runners
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP  # Talos API, fuer tofu apply
