kubernetes/infrastructure/network/cilium/base/etcd-snapshot-talos-api.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: etcd-snapshot-talos-api
spec:
  nodeSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: velero
            app.kubernetes.io/name: etcd-snapshot
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP  # Talos API, etcd-Snapshot
