kubernetes/infrastructure/network/cilium/base/fqdn-egress-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-external-egress
spec:
  endpointSelector: {}
  egress:
    - toFQDNs:
        - matchPattern: "*.ghcr.io"
        - matchPattern: "ghcr.io"
        - matchPattern: "*.docker.io"
        - matchPattern: "docker.io"
        - matchPattern: "registry-1.docker.io"
        - matchPattern: "*.quay.io"
        - matchPattern: "registry.k8s.io"
        - matchPattern: "*.gcr.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.github.com"
        - matchPattern: "github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchPattern: "*.helm.sh"
        - matchPattern: "charts.jetstack.io"
        - matchPattern: "*.cilium.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.cloudflare.com"
        - matchPattern: "cloudflare.com"
        - matchPattern: "*.letsencrypt.org"
        - matchPattern: "acme-v02.api.letsencrypt.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.tailscale.com"
        - matchPattern: "*.tailscale.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "3478"
              protocol: UDP
    - toCIDR:
        - "192.168.0.0/24"
    - toEntities:
        - kube-apiserver
